--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="uk">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Планер</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <!-- Стартовий екран з календарем -->
+        <div class="calendar-screen">
+            <h1>Оберіть дату</h1>
+            <input type="date" class="date-picker">
+            <button class="select-date">Обрати</button>
+        </div>
+        <!-- Екран завдань для обраної дати -->
+        <div class="task-screen">
+            <h1>Завдання на <br><span class="selected-date"></span></h1>
+            <ul class="task-list"></ul>
+            <button class="add-task">Додати завдання</button>
+            <button class="back-to-calendar">Назад</button>
+        </div>
+        <!-- Екран додавання нового завдання -->
+        <div class="add-task-screen">
+            <h1>Додати завдання на <br><span class="selected-all"></span></h1>
+            <input type="text" class="task-input" required placeholder="Введіть нове завдання">\
+            <button type="submit" class="add">Додати</button>
+            <button class="cancel-add-task">Відміна</button>
+        </div>
+    </div>
+</body>
+</html>
