--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
         </div>
         <!-- Екран додавання нового завдання -->
         <div class="add-task-screen">
-            <h1>Додати завдання на <br><span class="selected-all"></span></h1>
-            <input type="text" class="task-input" required placeholder="Введіть нове завдання">\
+            <h1>Додати завдання на <br><span class="task-date"></span></h1>
+            <form class="task-form">
+            <input type="text" class="task-input" required placeholder="Введіть нове завдання">
             <button type="submit" class="add">Додати</button>
             <button class="cancel-add-task">Відміна</button>
+            </form>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
